k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
